--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^1.7.1"
+    "@google-cloud/functions-framework": "^1.7.1",
+    "nodemailer": "^6.9.15"
   }
 }
